--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "react-blueprint-tutorial",
+  "name": "react-script-engine",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "marked": "^0.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-vis": "^1.11.7",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
