--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^6.3.3",
     "marked": "^0.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
