--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-vis": "^1.11.7",
+    "request": "^2.88.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
