--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://brain.less.coffee/scriptengine",
+  "homepage": "https://brain.less.coffee/scriptengine"
 }
