--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.18.1",
+    "blueprintjs": "0.0.8",
+    "draft": "^0.2.3",
+    "draft-js": "^0.11.0",
     "firebase": "^6.3.3",
     "marked": "^0.7.0",
     "react": "^16.8.6",
